<resources>
    <string name="app_name">MyStorePhi</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="welcome_to_storephi">Welcome to StorePhi</string>
    <string name="explore_the_application">Explore the application</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_signup">Don\'t have an account? <style color="#000000">Signup</style></string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="already_have_an_account_click_here">Already have an account? Click Here</string>
    <string name="main">Main</string>
    <string name="loading">Loading</string>
    <string name="wrong_class_msg">Wrong class!</string>
    <string name="email_empty_msg">Email cannot be empty!</string>
    <string name="name_empty_msg">Name cannot be empty!</string>
    <string name="phone_empty_msg">Phone cannot be empty!</string>
    <string name="password_empty_msg">Password cannot be empty!</string>
    <string name="address_name_empty_msg">Address name cannot be empty!</string>
    <string name="city_address_empty_msg">Address city cannot be empty!</string>
    <string name="address_description_empty_msg">Address description cannot be empty!</string>
    <string name="address_number_empty_msg">Address number cannot be empty!</string>
    <string name="address_zip_code_empty_msg">Address zip code cannot be empty!</string>
    <string name="something_wrong_msg">Something went wrong!</string>
    <string name="no_internet_connection_msg">No Internet Connection</string>
    <string name="categories">Categories</string>
    <string name="see_all">See All</string>
    <string name="featured">Featured</string>
    <string name="best_sell">Best Sell</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="price_example">$50,89</string>
    <string name="very_good">Very Good</string>
    <string name="_49_reviews_example">49 Reviews</string>
    <string name="description">Description</string>
    <string name="select_size">Select Size</string>
    <string name="select_color">Select Color</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="not_good_string">Not Good</string>
    <string name="good_string">Good</string>
    <string name="excellent_string">Excellent</string>
    <string name="address">Address</string>
    <string name="add_new_address">Add New Address</string>
    <string name="continue_with_payment">Continue With Payment</string>
    <string name="address_line">Address Line</string>
    <string name="city">City</string>
    <string name="postal_code">Postal Code</string>
    <string name="create_address">Create Address</string>
    <string name="add_address">Add Address</string>
    <string name="all_fields_must_be_filled">ALL FIELDS MUST BE FILLED!</string>
    <string name="address_number">Address Number</string>
    <string name="subtotal">Subtotal</string>
    <string name="discount">Discount</string>
    <string name="shipping">Shipping</string>
    <string name="total">Total</string>
    <string name="add_card">Add Card</string>
    <string name="checkout">Checkout</string>
    <string name="payment">Payment</string>
    <string name="logout">Logout</string>
</resources>