<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_8sdp"
    android:fillViewport="true"
    tools:context=".presentation.fragment.HomeFragment">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayoutHomeFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarHomeFragment"
                style="@android:style/Widget.Toolbar.Button.Navigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.appbar.AppBarLayout>


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="98dp" />

        <TextView
            android:id="@+id/textViewHomeFragmentCategories"
            style="@style/CustomText.Bold.Title_Card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categories"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <TextView
            android:id="@+id/textViewHomeFragmentSelectAllCategories"
            style="@style/CustomText.Bold.SubTitle_Card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_all"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewHomeFragmentCategories"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:elevation="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewHomeFragmentCategories" />

        <TextView
            android:id="@+id/textViewHomeFragmentFeatured"
            style="@style/CustomText.Bold.Title_Card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/featured"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerViewHomeFragmentCategories" />

        <TextView
            android:id="@+id/textViewHomeFragmentSeeAllFeatured"
            style="@style/CustomText.Bold.SubTitle_Card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/see_all"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerViewHomeFragmentCategories" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewHomeFragmentFeatured"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:elevation="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewHomeFragmentFeatured" />

        <TextView
            android:id="@+id/textViewHomeFragmentBestSell"
            style="@style/CustomText.Bold.Title_Card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/best_sell"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerViewHomeFragmentFeatured" />

        <TextView
            android:id="@+id/textViewHomeFragmentSeeAllBestSell"
            style="@style/CustomText.Bold.SubTitle_Card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/see_all"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerViewHomeFragmentFeatured" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewHomeFragmentBestSell"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:elevation="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewHomeFragmentBestSell" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
